@@ -4,7 +4,7 @@ import NetZero.domain.Coupon;
 import NetZero.domain.Member;
 import NetZero.domain.MemberCoupon;
 import NetZero.domain.PointHistory;
-import NetZero.dto.CouponResponse;
+import NetZero.dto.MyCouponResponse;
 import NetZero.exception.BusinessException;
 import NetZero.exception.ErrorCode;
 import NetZero.repository.CouponRepository;
@@ -18,7 +18,6 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -31,15 +30,19 @@ public class CouponService {
 
 
     @Transactional(readOnly = true)
-    public List<CouponResponse> getMyCoupons(Member member) {
-        return memberCouponRepository.findByMemberAndIsUsedFalse(member)
-                .stream()
-                .map(CouponResponse::new)
-                .collect(Collectors.toList());
+    public List<MyCouponResponse> getMyCoupons(String memberId) {
+        Member member = memberRepository.findById(memberId)
+                .orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
+
+        List<MemberCoupon> myCoupons = memberCouponRepository.findByMemberAndIsUsedFalse(member);
+
+        return myCoupons.stream()
+                .map(MyCouponResponse::from)//DTO에 있는 팩토리 메서드 사용, static이라 바로 호출
+                .toList();
     }
 
     @Transactional
-    public void purchaseCoupon(String memberId, long couponId){
+    public MemberCoupon purchaseCoupon(String memberId, long couponId){
         Member member = memberRepository.findById(memberId).orElseThrow(() -> new BusinessException(ErrorCode.USER_NOT_FOUND));
 
         Coupon coupon = couponRepository.findById(couponId).orElseThrow(() -> new BusinessException(ErrorCode.COUPON_NOT_FOUND));
@@ -48,10 +51,10 @@ public class CouponService {
 
         pointHistoryRepository.save(new PointHistory(member, -coupon.getPrice(), coupon.getName() + "구매"));
 
-        String couponName = UUID.randomUUID().toString().substring(0, 8);
+        String barcode = UUID.randomUUID().toString().substring(0, 8);
         LocalDate validDate = LocalDate.now().plusMonths(1);
 
-        MemberCoupon memberCoupon = new MemberCoupon(member, coupon, couponName, validDate);
-        memberCouponRepository.save(memberCoupon);
+        MemberCoupon memberCoupon = new MemberCoupon(member, coupon, barcode, validDate);
+        return memberCouponRepository.save(memberCoupon);
     }
 }
